WIP updates to the tests to start Karaf with OpenJFX installed. Currently not functional.